<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <artifactId>build</artifactId>
    <groupId>uk.ac.ebi.quickgo</groupId>
    <version>0.0.1-SNAPSHOT</version>
    <packaging>pom</packaging>

    <name>Builds the QuickGO project</name>
    <description>Aggregator pom configured to build certain parts, or all of the QuickGO project</description>

    <properties>
        <maven.compiler.target>17</maven.compiler.target>
        <maven.compiler.source>17</maven.compiler.source>
    </properties>

    <profiles>
        <profile>
            <id>solr-plugins</id>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>
            <modules>
                <module>solr-plugin</module>
            </modules>
        </profile>
        <profile>
            <id>all</id>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>
            <modules>
                <module>common</module>
                <module>ontology-common</module>
                <module>ontology-rest</module>
                <module>geneproduct-common</module>
                <module>geneproduct-rest</module>
                <module>annotation-common</module>
                <module>annotation-rest</module>
                <module>quickgo-client</module>
                <module>indexing</module>
                <module>sources</module>
                <module>rest-common</module>
                <module>solr-plugin</module>
            </modules>
        </profile>
        <profile>
            <id>indexing</id>
            <modules>
                <module>sources</module>
                <module>common</module>
                <module>ontology-common</module>
                <module>geneproduct-common</module>
                <module>annotation-common</module>
                <module>indexing</module>
                <module>solr-plugin</module>
            </modules>
        </profile>
        <profile>
            <id>ontology_web_service</id>
            <modules>
                <module>common</module>
                <module>ontology-common</module>
                <module>rest-common</module>
                <module>ontology-rest</module>
                <module>solr-plugin</module>
            </modules>
        </profile>
        <profile>
            <id>gene_product_web_service</id>
            <modules>
                <module>common</module>
                <module>geneproduct-common</module>
                <module>rest-common</module>
                <module>geneproduct-rest</module>
                <module>solr-plugin</module>
            </modules>
        </profile>
        <profile>
            <id>annotation_web_service</id>
            <modules>
                <module>common</module>
                <module>annotation-common</module>
                <module>ontology-common</module>
                <module>rest-common</module>
                <module>annotation-rest</module>
                <module>solr-plugin</module>
            </modules>
        </profile>
        <profile>
            <id>client_web_service</id>
            <modules>
                <module>common</module>
                <module>ontology-common</module>
                <module>rest-common</module>
                <module>quickgo-client</module>
                <module>solr-plugin</module>
            </modules>
        </profile>
    </profiles>
</project>
